tests/machine/x/lua/group_by_sort.error
line 220: run error: exit status 1
lua: /workspace/mochi/tests/machine/x/lua/group_by_sort.lua:220: invalid value (table) at index 1 in table for 'concat'
stack traceback:
	[C]: in function 'table.concat'
	/workspace/mochi/tests/machine/x/lua/group_by_sort.lua:220: in main chunk
	[C]: in ?

